idf_component_register(
    SRCS "Logger.cpp"
         "Launchpad.cpp"
         "main.cpp"
         "HealthCheck.cpp"
         "IODriver.cpp"
         "ChargeMonitor.cpp"
         "EventDispatcher.cpp"
         "Communication.cpp"
         "DigitalInput.cpp"
         "Power.cpp"
    INCLUDE_DIRS "include"
)